--- a/springProject/src/main/resources/static/public/css/qnaList.css
+++ b/springProject/src/main/resources/static/public/css/qnaList.css
@@ -1,6 +1,7 @@
 #path {
     display: flex;
     margin: 20px 0;
+    min-width: 1200px;
 }
 #path ol {
     margin-left: auto;      
@@ -18,6 +19,7 @@ h2 {
     display: flex;
     justify-content: center;
     margin: 40px 0 60px 0;
+    min-width: 1200px;
 }
 #table #tableList th, td {
     text-align: center;
