--- a/springProject/src/main/resources/static/public/css/footer.css
+++ b/springProject/src/main/resources/static/public/css/footer.css
@@ -1,5 +1,6 @@
 #footer {
     background-color: #0dcaf0;
+    min-width: 1200px;
 }
 #footer #footerTop {
     padding: 5px 10px;
@@ -18,6 +19,9 @@
 }
 #footer #footerCenter a {
     color: dodgerblue;
+}
+#footer #footerBottom {
+	min-width: 1200px;
 }
 #footer #footerBottom div {
     margin: 20px 20px 20px 32px;
