--- a/springProject/src/main/resources/static/public/css/index.css
+++ b/springProject/src/main/resources/static/public/css/index.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     margin: 80px 0;
+    min-width: 1200px;
 }
 #subImgContainer .SubImg{
     text-align: center;
@@ -28,6 +29,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 80px 0;
+    min-width: 1200px;
 }
 #promotion #promotionImg {
     margin-right: 100px;
