--- a/springProject/src/main/resources/templates/footer.html
+++ b/springProject/src/main/resources/templates/footer.html
@@ -24,7 +24,7 @@
 	        <li class="nav-item mb-2 text-muted">[택배 A/S 접수] 서울 마포구 양화로 122 | [고객 센터] 1234-5678 (팩스 번호 02-123-4567)</li>
 	      </ul>
 	    </div>
-	    <div class="d-flex flex-column flex-sm-row justify-content-between mt-3" id="footerBottom">
+	    <div class="d-flex flex-sm-row justify-content-between mt-3" id="footerBottom">
 	      <div class="col-md-4 d-flex align-items-center">
 		      <a href="/" class="mb-3 me-2 mb-md-0 text-decoration-none lh-1">
 		        Project_3.com
