--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -29,7 +29,7 @@
 	        <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
 			    <li class="breadcrumb-item"><a href="#">로그인</a></li>
-			    <li class="breadcrumb-item"><a href="#">회원가입</a></li>
+			    <li class="breadcrumb-item"><a href="/user/signup">회원가입</a></li>
 			    <li class="breadcrumb-item"><a href="#">장바구니</a></li>
 			  </ol>
 			</nav>  
@@ -43,7 +43,7 @@
 	  	<div class="dropdown" id="dropdown1">
 	        <button class="dropdown-btn">노트북/데스크탑</button>
 	        <div class="dropdown-submenu">
-	            <a href="#none">노트북</a>
+	            <a href="/product/productList/1">노트북</a>
 	            <a href="#none">데스크탑</a>
 	        </div>
     	</div>
@@ -66,8 +66,8 @@
 	        <button class="dropdown-btn">고객 센터</button>
 	        <div class="dropdown-submenu">
 	            <a href="#none">공지 사항</a>
-	            <a href="#none">FAQ</a>
-	            <a href="#none">Q&A</a>
+	            <a href="/question/faqList/1/0">FAQ</a>
+	            <a href="/question/qnaList/1">Q&A</a>
 	        </div>
     	</div>
 	  </div>
