--- a/springProject/src/main/resources/templates/index.html
+++ b/springProject/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<header th:insert="/header"></header>
-	<main class="container">
-	<div id="mainImgContainer" class="carousel slide carousel-fade" data-bs-ride="carousel">
+	<main class="container-fluid">
+	<div id="mainImgContainer" class="carousel slide carousel-fade" data-bs-ride="carousel" style="min-width: 1200px;">
 	  <div class="carousel-inner">
 	    <div class="carousel-item active">
 	      <img src="/public/img/1658994834_781_6140.jpg" class="d-block w-100" alt="...">
