--- a/springProject/src/main/resources/templates/product/productNav.html
+++ b/springProject/src/main/resources/templates/product/productNav.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="/public/css/productNav.css">
 </head>
 <body>
-    <nav id="productNav" class="navbar navbar-expand-lg bg-light border">
+    <nav id="productNav" class="navbar navbar-expand bg-light border">
 	  <div class="container-fluid">
 	    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
