--- a/springProject/src/main/resources/templates/order/orderPage.html
+++ b/springProject/src/main/resources/templates/order/orderPage.html
@@ -4,107 +4,227 @@
 <meta charset="UTF-8">
 <title>결제 페이지</title>
 </head>
-<style>
-h1 {
-text-align: center;
-}
-#pageOutline{
-margin: 50px 100px; display: flex; justify-content: space-evenly;
-}
-#paymentMethod{
-margin-bottom: 70px;
-}
-</style>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script th:src="@{/public/js/adressApi.js}" defer="defer">
+</script>
 <body>
-	<h1>결제 페이지입니다.</h1>
-	<div id="pageOutline">
-		<div id="firstSection">
-			<div id="UserInfo">
-			<h2>주문 정보</h2>
-			<hr>
-					주문자 * <input type="text"><br>
-					이메일 * <input type="text"> @
-					<select name="email">
-					<option>gmail.com</option>
-					<option>kakao.com</option>
-					<option>naver.com</option>
-					</select>
-					<br>
-					전화번호 *
-					<select>
-					<option>010</option>
-					<option>011</option>
-					<option>017</option>
-					<option>02</option>
-					<option>031</option>
-					<option>032</option>
-					</select>
-					<input type="tel" size="3">
-					<input type="tel" size="3">
-					<br>
-					주소 *
-					<input type="text" placeholder="우편번호" size="5">
-					<button>주소검색</button> <br>
-					<input type="text" placeholder="기본주소"><br>
-					<input type="text" placeholder="나머지주소(선택입력가능)"><br>
-			</div>
-			<div id="shippingAdress">
-			<h2>배송지</h2>
-			<hr>
-				<button>최근배송지</button>
-				<button>직접입력</button>
-				<br>
-				<form method="post">
-				<input type="radio" name="shippingAdress" value="same">주문자 정보와 동일
-				<input type="radio" name="shippingAdress" value="new">새로운 배송지
-				</form>
-				받는사람 * <input type="text"><br>
-				주소 *
-					<input type="text" placeholder="우편번호" size="5">
-					<button>주소검색</button> <br>
-					<input type="text" placeholder="기본주소"><br>
-					<input type="text" placeholder="나머지주소(선택입력가능)"><br>
-					전화번호 *
-					<select>
-					<option>010</option>
-					<option>011</option>
-					<option>017</option>
-					<option>02</option>
-					<option>031</option>
-					<option>032</option>
-					</select>
-					<input type="tel" size="3">
-					<input type="tel" size="3">
-					<br>
-					<select>
-					<option>배송 메세지선택(선택사항)</option>
-					<option>배송 전 연락바랍니다.</option>
-					<option>부재시 연락바랍니다.</option>
-					<option>부재시 문 앞에 놔주세요.</option>
-					</select>
-			</div>
-		</div>
-		<div id="SecondSection">
-			<div id="paymentMethod">
-			<h2>결제수단</h2>
-			<hr>
-				<fieldset>
-				<legend>결제 수단 선택</legend>
-				<input type="radio">신용카드
-				<input type="radio">계좌이체
-				<input type="radio">무통장입금
-				<input type="radio">가상계좌
-				</fieldset>
-				<input type="checkbox"> 결제수단을 다음에도 사용
-			</div>
-			<div id="paymentInfo">
-			<h2>결제정보</h2>
-			<hr>
-				<p><span>주문상품</span> <strong>839,000</strong></p>
-				<p><span>배송비</span> <strong>0</strong></p>
-				<p><span>결제금액</span> <strong>839,000 원</strong></p> 
+	<header th:insert="/header"></header>
+	<main class="container">
+	<h1 class="text-center my-5">결제 페이지</h1>
+	<!-- <p th:text="${ordersheet.user.user_id}"></p> -->
+		<div class="d-flex flex-column align-items-center">
+		<div class="w-50">
+		<h2>주문 정보</h2>
+		<p class="text-left mx-3">*표는 필수표시 항목입니다.</p>
+		<hr>
+			<form class="row row-cols-lg-auto g-3 align-items-center mb-3">
+				  <div class="col-12">
+				    <label class="visually-hidden" for="inlineFormInputGroupUsername">주문자</label>
+				    <div class="input-group">
+				      <div class="input-group-text">주문자 *</div>
+				      <input type="text" class="form-control" id="inlineFormInputGroupUsername" th:value="${ordersheet.user.user_name}">
+				    </div>
+				  </div>
+			  </form>
+			<form class="row row-cols-lg-auto g-3 align-items-center mb-3">
+				  <div class="col-12">
+				    <label class="visually-hidden" for="inlineFormInputGroupUserEmail">이메일</label>
+				    <div class="input-group">
+				      <div class="input-group-text">이메일 *</div>
+				      <input type="text" class="form-control" id="inlineFormInputGroupUserEmail" th:value="${userEmailId}">
+				      <input type="text" class="form-control" id="inlineFormInputGroupUserEmail" th:value="'@'+${userEmailAdr}">
+				    </div>
+				  </div>
+				
+				  <div class="col-12">
+				    <label class="visually-hidden" for="inlineFormSelectPref">Preference</label>
+				    <select class="form-select" id="inlineFormSelectPref">
+				      <option selected>@직접입력</option>
+				      <option value="1">@gmail.com</option>
+				      <option value="2">@naver.com</option>
+				      <option value="3">@daum.net</option>
+				    </select>
+				  </div>
+			  </form>
+				<form class="row row-cols-lg-auto g-3 align-items-center mb-3 d-flex flex-direction-row justify-content-left">
+					<div class="input-group">
+						<span class="input-group-text" id="inputGroup-sizing-default">전화번호 *</span>
+						<button class="btn btn-outline-secondary dropdown-toggle" type="button"
+								data-bs-toggle="dropdown" aria-expanded="false">010</button>
+						  <ul class="dropdown-menu dropdown-menu-end">
+						    <li><a class="dropdown-item">010</a></li>
+						    <li><a class="dropdown-item">02</a></li>
+						    <li><a class="dropdown-item">031</a></li>
+						    <li><a class="dropdown-item">032</a></li>
+						  </ul>
+						  <div class="d-flex ">
+					  <input type="text" th:value="${userPhoneMid}"
+					  	class="form-control" aria-label="Username">
+					  <input type="text" th:value="${userPhoneLast}"
+					  	class="form-control"aria-label="Server">
+						  </div>
+					</div>
+			  </form>
+			<form class="row g-3">
+			  <div class="col-auto">
+			    <label for="staticEmail2" class="visually-hidden">주소 *</label>
+			    <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="주소 *">
+			  </div>
+			  <div class="col-auto">
+			    <label for="inputPassword2" class="visually-hidden">우편번호</label>
+			    <input type="text" class="form-control" id="sample6_postcode" placeholder="우편번호">
+			  </div>
+			  <div class="col-auto">
+				<input class="btn btn-outline-dark"type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"><br>
+			  </div>
+			</form>
+			<div class="col-5">
+			<input class="form-control col-3" type="text" id="sample6_address" placeholder="주소">
+			<input class="form-control col-3" type="text" id="sample6_detailAddress" placeholder="상세주소">
+			<input class="form-control col-3" type="text" id="sample6_extraAddress" placeholder="참고항목">
 			</div>
 		</div>
-	</div>
+		
+		<div class="w-50 mb-50">
+		<h2>배송지</h2>
+		<p class="text-left mx-3">*표는 필수표시 항목입니다.</p>
+		<hr>
+			<div class="d-flex">
+			<div class="form-check">
+				  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+				  <label class="form-check-label" for="flexRadioDefault1">
+				    주문자의 정보와 동일
+				  </label>
+				</div>
+				<div class="form-check">
+				  <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
+				  <label class="form-check-label" for="flexRadioDefault2">
+				    새로운 배송지 입력
+				  </label>
+				</div>
+			</div>
+			<form class="row row-cols-lg-auto g-3 align-items-center mb-3">
+				  <div class="col-12">
+				    <label class="visually-hidden" for="inlineFormInputGroupUsername">주문자</label>
+				    <div class="input-group">
+				      <div class="input-group-text">주문자 *</div>
+				      <input type="text" class="form-control" id="inlineFormInputGroupUsername">
+				    </div>
+				  </div>
+			  </form>
+			<form class="row row-cols-lg-auto g-3 align-items-center mb-3">
+				  <div class="col-12">
+				    <label class="visually-hidden" for="inlineFormInputGroupUserEmail">이메일</label>
+				    <div class="input-group">
+				      <div class="input-group-text">이메일 *</div>
+				      <input type="text" class="form-control" id="inlineFormInputGroupUserEmail">
+				      <input type="text" class="form-control" id="inlineFormInputGroupUserEmail">
+				    </div>
+				  </div>
+				
+				  <div class="col-12">
+				    <label class="visually-hidden" for="inlineFormSelectPref">Preference</label>
+				    <select class="form-select" id="inlineFormSelectPref">
+				      <option selected>@직접입력</option>
+				      <option value="1">@gmail.com</option>
+				      <option value="2">@naver.com</option>
+				      <option value="3">@daum.net</option>
+				    </select>
+				  </div>
+			  </form>
+				<form class="row row-cols-lg-auto g-3 align-items-center mb-3 d-flex flex-direction-row justify-content-left">
+					<div class="input-group">
+						<span class="input-group-text" id="inputGroup-sizing-default">전화번호 *</span>
+						<button class="btn btn-outline-secondary dropdown-toggle" type="button"
+							data-bs-toggle="dropdown" aria-expanded="false">010</button>
+						  <ul class="dropdown-menu dropdown-menu-end">
+						    <li><a class="dropdown-item">010</a></li>
+						    <li><a class="dropdown-item">02</a></li>
+						    <li><a class="dropdown-item">031</a></li>
+						    <li><a class="dropdown-item">032</a></li>
+						  </ul>
+						  <div class="d-flex ">
+					  <input type="text" class="form-control" aria-label="Username">
+					  <input type="text" class="form-control"aria-label="Server">
+						  </div>
+					</div>
+			  </form>
+			<form class="row g-3">
+			  <div class="col-auto">
+			    <label for="staticEmail2" class="visually-hidden">주소 *</label>
+			    <input type="text" readonly class="form-control-plaintext" id="staticEmail2" value="주소 *">
+			  </div>
+			  <div class="col-auto">
+			    <label for="inputPassword2" class="visually-hidden">우편번호</label>
+			    <input type="text" class="form-control" id="sample6_postcode" placeholder="우편번호">
+			  </div>
+			  <div class="col-auto">
+				<input class="btn btn-outline-dark"type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"><br>
+			  </div>
+			</form>
+			<div class="col-5">
+			<input class="form-control col-3" type="text" id="sample6_address" placeholder="주소">
+			<input class="form-control col-3" type="text" id="sample6_detailAddress" placeholder="상세주소">
+			<input class="form-control col-3" type="text" id="sample6_extraAddress" placeholder="참고항목">
+			</div>
+		</div>
+		</div>
+		<div class="d-flex flex-column align-items-center">
+		<div class="w-50">
+		<h2>결제수단</h2>
+		<hr>
+			<fieldset>
+			<legend>결제 수단 선택</legend>
+				<div class="d-flex">
+				<div class="form-check me-4">
+				  <input class="form-check-input" type="radio" name="paymentRadio" id="paymentRadio1">
+				  <label class="form-check-label" for="paymentRadio1">
+				    계좌이체
+				  </label>
+				</div>
+				<div class="form-check me-4">
+				  <input class="form-check-input" type="radio" name="paymentRadio" id="paymentRadio2">
+				  <label class="form-check-label" for="paymentRadio2">
+				    가상계좌
+				  </label>
+				</div>
+				<div class="form-check me-4">
+				  <input class="form-check-input" type="radio" name="paymentRadio" id="paymentRadio3">
+				  <label class="form-check-label" for="paymentRadio3">
+				    신용카드
+				  </label>
+				</div>
+				<div class="form-check me-4">
+				  <input class="form-check-input" type="radio" name="paymentRadio" id="paymentRadio4" checked>
+				  <label class="form-check-label" for="paymentRadio4">
+				    무통장입금
+				  </label>
+				</div>
+				</div>
+			</fieldset>
+		</div>
+		<div class="w-50">
+		<h2>결제정보</h2>
+		<hr>
+		<table class="table">
+			  <tbody>
+			    <tr>
+			      <th scope="row">주문상품</th>
+			      <td><strong>839,000</strong></td>
+			    </tr>
+			    <tr>
+			      <th scope="row">배송비</th>
+			      <td><strong>0</strong></td>
+			    </tr>
+			    <tr>
+			      <th scope="row">결제금액</th>
+			      <td colspan="2"><strong>839,000 원</strong></td>
+			    </tr>
+			  </tbody>
+			</table>
+		</div>
+		</div>
+	</main>
+	<footer th:insert="/footer"></footer>
 </body>
 </html>
