--- a/springProject/src/main/resources/static/public/css/signup.css
+++ b/springProject/src/main/resources/static/public/css/signup.css
@@ -17,6 +17,7 @@
     padding: 30px 0 50px 0;
     min-width: 1200px;
     margin: 0 auto;
+    margin-bottom: 60px;
 }
 #container #subContainer {
     display: flex;
@@ -43,7 +44,7 @@
     height: 50px;
     font-size: 14px;
     font-weight: bold;
-    padding-left: 17px;
+    padding-left: 15px;
     line-height: 50px;
 }
 #container #subContainer #signupBox #signupForm button {
