--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -19,7 +19,7 @@
         	<div class="container-fluid" id="searchBox">
 			  <form class="d-flex" role="search" action="#" id="searchForm" name="searchForm" method="get">
 			    <input class="form-control me-2" name="searchInput" id="searchInput" type="search" aria-label="Search" value minlength="2" maxlength="50">
-			    <button class="btn" type="submit" style="">
+			    <button class="btn" type="submit">
 			    	<img alt="" src="/public/img/pngegg.png">
 			    </button>
 			  </form>
