--- a/springProject/src/main/resources/templates/index.html
+++ b/springProject/src/main/resources/templates/index.html
@@ -19,6 +19,12 @@
 	    <div class="carousel-item">
 	      <img src="/public/img/1659499786_0871_3184.jpg" class="d-block w-100" alt="...">
 	    </div>
+	    <div class="carousel-item">
+	      <img src="/public/img/1660786205_5733_6659.jpg" class="d-block w-100" alt="...">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="/public/img/1659329913_3848_2196.jpg" class="d-block w-100" alt="...">
+	    </div>
 	  </div>
 	  <button class="carousel-control-prev" type="button" data-bs-target="#mainImgContainer" data-bs-slide="prev">
 	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
