--- a/springProject/src/main/resources/templates/question/qnaList.html
+++ b/springProject/src/main/resources/templates/question/qnaList.html
@@ -38,7 +38,7 @@
     </div>
     <div class="d-flex justify-content-center" th:insert="/pagination/pageQnaAll"></div>
     <div id="searchArea">
-    <form action="#" method="get" enctype="multipart/form-data">
+    <form action="#" method="get" enctype="multipart/form-data" name="qnaSearch">
            <select name="searchDate" id="searchDate" class="form-select form-select-sm">
                <option value="week">일주일</option>
                <option value="month">1개월</option>
