--- a/springProject/src/main/resources/templates/question/qnaList.html
+++ b/springProject/src/main/resources/templates/question/qnaList.html
@@ -15,7 +15,10 @@
 	    <li class="breadcrumb-item" aria-current="page"><a href="/question/qnaList/1" class="breadcrumb-item active">상품 Q&A</a></li>
 	  </ol>
 	</nav>
-    <h2>상품 Q&A</h2>
+    <h2 class="d-flex justify-content-between">
+    	<span>상품 Q&A</span>
+		<a href="/question/insertQna.do" class="small btn btn-secondary">나도 문의하기</a>
+    </h2>
     <div id="table">
         <table id="tableList" class="table table-striped table-hover">
             <thead>
