--- a/springProject/src/main/resources/templates/header.html
+++ b/springProject/src/main/resources/templates/header.html
@@ -19,7 +19,7 @@
         	<div class="container-fluid" id="searchBox">
 			  <form class="d-flex" role="search" action="#" id="searchForm" name="searchForm" method="get">
 			    <input class="form-control me-2" name="searchInput" id="searchInput" type="search" aria-label="Search" value minlength="2" maxlength="50">
-			    <button class="btn" type="submit" style="">
+			    <button class="btn" type="submit">
 			    	<img alt="" src="/public/img/pngegg.png">
 			    </button>
 			  </form>
@@ -28,8 +28,17 @@
         <div id="headerRight">
 	        <nav style="--bs-breadcrumb-divider: '|';" aria-label="breadcrumb">
 			  <ol class="breadcrumb">
-			    <li class="breadcrumb-item"><a href="#">로그인</a></li>
-			    <li class="breadcrumb-item"><a href="#">회원가입</a></li>
+			  	<th:block th:if="${session.loginUser==null}">
+			    	<li class="breadcrumb-item"><a href="/user/login.do">로그인</a></li>
+			    	<li class="breadcrumb-item"><a href="/user/signup">회원가입</a></li>
+			    </th:block>
+			    <th:block th:unless="${session.loginUser==null}">
+     				<a th:href="@{/user/detail/{user_id}(user_id=${session.loginUser.user_id})}" class="btn btn-sm btn-outline-secondary">					
+     				<span th:text="${session.loginUser.user_name}"></span>
+					(<span th:text="${session.loginUser.user_id}"></span>)
+					</a> / 
+					<a href="/user/logout.do" class="btn btn-sm btn-danger">로그아웃</a>
+     			</th:block>
 			    <li class="breadcrumb-item"><a href="#">장바구니</a></li>
 			  </ol>
 			</nav>  
@@ -43,7 +52,7 @@
 	  	<div class="dropdown" id="dropdown1">
 	        <button class="dropdown-btn">노트북/데스크탑</button>
 	        <div class="dropdown-submenu">
-	            <a href="#none">노트북</a>
+	            <a href="/product/productList/1">노트북</a>
 	            <a href="#none">데스크탑</a>
 	        </div>
     	</div>
@@ -66,8 +75,8 @@
 	        <button class="dropdown-btn">고객 센터</button>
 	        <div class="dropdown-submenu">
 	            <a href="#none">공지 사항</a>
-	            <a href="#none">FAQ</a>
-	            <a href="#none">Q&A</a>
+	            <a href="/question/faqList/1/0">FAQ</a>
+	            <a href="/question/qnaList/1">Q&A</a>
 	        </div>
     	</div>
 	  </div>
