--- a/springProject/src/main/resources/templates/index.html
+++ b/springProject/src/main/resources/templates/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<header th:insert="/header"></header>
-	<main class="container">
-	<div id="mainImgContainer" class="carousel slide carousel-fade" data-bs-ride="carousel">
+	<main class="container-fluid">
+	<div id="mainImgContainer" class="carousel slide carousel-fade" data-bs-ride="carousel" style="min-width: 1200px;">
 	  <div class="carousel-inner">
 	    <div class="carousel-item active">
 	      <img src="/public/img/1658994834_781_6140.jpg" class="d-block w-100" alt="...">
@@ -18,6 +18,12 @@
 	    </div>
 	    <div class="carousel-item">
 	      <img src="/public/img/1659499786_0871_3184.jpg" class="d-block w-100" alt="...">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="/public/img/1660786205_5733_6659.jpg" class="d-block w-100" alt="...">
+	    </div>
+	    <div class="carousel-item">
+	      <img src="/public/img/1659329913_3848_2196.jpg" class="d-block w-100" alt="...">
 	    </div>
 	  </div>
 	  <button class="carousel-control-prev" type="button" data-bs-target="#mainImgContainer" data-bs-slide="prev">
