--- a/springProject/src/main/resources/templates/user/signup.html
+++ b/springProject/src/main/resources/templates/user/signup.html
@@ -4,100 +4,117 @@
     <meta charset="UTF-8">
     <title>Document</title>
 	<link rel="stylesheet" href="/public/css/signup.css">
+	<script src="/public/js/signup.js" defer="defer"></script>
 </head>
 <body>
-	<header th:insert="/header"></header>
-	<main class="container">
+<header th:insert="/header"></header>
+  <main class="container-fluid">
+	<nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" id="path">
+	  <ol class="breadcrumb">
+	    <li class="breadcrumb-item"><a href="/">홈</a></li>
+	    <li class="breadcrumb-item" aria-current="page"><a href="/user/signup" class="breadcrumb-item active">회원가입</a></li>
+	  </ol>
+	</nav>
     <div id="container">
         <div id="subContainer">
             <div id="signupBox">
                 <div id="signupLogo">회원가입</div>
-                 <form action="#" name="signupForm" id="signupForm" method="post">
-				    <div class="row g-3 align-items-center">
+                 <form action="/user/signup.do" name="signupForm" id="signupForm" method="post">
+                    <div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="text" name="inputName" class="form-control signupInput" placeholder="이름 2자 이상" value minlength="2" maxlength="16" required>
+					    <input type="text" name="user_name" class="form-control signupInput" placeholder="이름 : 2 ~ 20자의 영문 또는 한글" 
+					    	    minlength="2" maxlength="20" required>
 					  </div>
-					  <div class="col-auto">
-					  <span class="form-text">사용 가능합니다.</span>
+					  <div class="col-auto mt-0">
+					     <span id="nameHelp" class="form-text"></span>
 						 <span class="valid-feedback">
-						   사용 가능합니다.
+						   사용 가능한 이름입니다.
 						 </span>
-						 <span class="invalid-feedback">
-						   2자 이상 입력하세요.
-						 </span> 
+						 <span id="nameHelpInvalid" class="invalid-feedback"></span> 
 						</div>
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="text" name="inputId" class="form-control signupInput" placeholder="ID 4 ~ 16자" value minlength="4" maxlength="16" required>
+					    <input type="text" name="user_id" class="form-control signupInput" placeholder="ID : 6 ~ 20자의 영문으로 시작하는 영문 또는 숫자" 
+					    	   minlength="6" maxlength="20" required>
 					  </div>
-					  <div class="col-auto">
+					  <div class="col-auto mt-0">
+					     <span id="idHelp" class="form-text"></span>
 						 <span class="valid-feedback">
 						   사용 가능한 아이디입니다.
 						 </span>
-						 <span class="invalid-feedback">
-						   이미 사용 중인 아이디입니다.
-						 </span> 
+						 <span id="idHelpInvalid" class="invalid-feedback"></span> 
 						</div>
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="password" name="inputPw" class="form-control signupInput" placeholder="비밀번호 8 ~ 16자" value minlength="8" maxlength="16" required>
+					    <input type="password" name="user_pw" class="form-control signupInput" placeholder="비밀번호 : 8 ~ 16자의 영문, 숫자, 특수 문자를 최소 한 가지씩 조합" 
+					    		minlength="8" maxlength="16" required>
 					  </div>
-					  <div class="col-auto">
+					  <div class="col-auto mt-0">
+					     <span id="pwHelp" class="form-text"></span>
 						 <span class="valid-feedback">
 						   사용 가능한 비밀번호입니다.
 						 </span>
-						 <span class="invalid-feedback">
-						   이미 사용 중인 비밀번호입니다.
-						 </span> 
+						 <span id="pwHelpInvalid" class="invalid-feedback"></span> 
 						</div>
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="password" name="inputPwCheck" class="form-control signupInput" placeholder="비밀번호 확인" value minlength="8" maxlength="16" required>
+					    <input type="password" name="pwCheck" class="form-control signupInput" placeholder="비밀번호 확인" 
+					    		minlength="8" maxlength="16" required>
 					  </div>
-					  <div class="col-auto">
+					  <div class="col-auto mt-0">
+					     <span id="pwCheckHelp" class="form-text"></span>
 						 <span class="valid-feedback">
-						   일치합니다.
+						   비밀번호가 일치합니다.
 						 </span>
-						 <span class="invalid-feedback">
-						   불일치합니다.
-						 </span> 
+						 <span id="pwHelpInvalidCheck" class="invalid-feedback"></span> 
 						</div>
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="email" name="inputEmail" class="form-control signupInput" placeholder="이메일 주소" value required>
+					    <input type="email" name="user_email" class="form-control signupInput" placeholder="이메일 : id@domain (Kevin@example.com) 형식" 
+					    		required>
 					  </div>
-					  <div class="col-auto">
+					  <div class="col-auto mt-0">
+					     <span id="emailHelp" class="form-text"></span>
 						 <span class="valid-feedback">
 						   사용 가능한 이메일입니다.
 						 </span>
-						 <span class="invalid-feedback">
-						   이미 사용 중인 이메일입니다.
-						 </span> 
+						 <span id="emailHelpInvalid" class="invalid-feedback"></span> 
 						</div>
 					</div>
 					<div class="row g-3 align-items-center">
 					  <div class="col-auto signupInputBox">
-					    <input type="text" name="inputPhone" class="form-control signupInput" placeholder="휴대폰 번호('-' 제외하고 숫자만 입력)" value minlength="10" maxlength="12" required>
+					    <input type="text" name="user_phone" class="form-control signupInput" placeholder="휴대폰 : ###-####-#### 형식" 
+					    		minlength="10" maxlength="16" required>
 					  </div>
-					  <div class="col-auto">
+					  <div class="col-auto mt-0">
+					  <span id="phoneHelp" class="form-text"></span>
 						 <span class="valid-feedback">
 						   사용 가능한 전화번호입니다.
 						 </span>
-						 <span class="invalid-feedback">
-						   이미 사용 중인 전화번호입니다.
-						 </span> 
-						</div>
+						 <span id="phoneHelpInvalid" class="invalid-feedback"></span> 
+					  </div>
+					</div> 
+					<div class="row g-3 align-items-center">
+					  <div class="col-auto signupInputBox">
+					    <input type="text" name="user_adress" class="form-control signupInput" placeholder="주소"
+					    		required>
+					  </div>
+					  <div class="col-auto mt-0">
+					  <span id="adressHelp" class="form-text"></span>
+						 <span class="valid-feedback"></span>
+						 <span id="adressHelpInvalid" class="invalid-feedback"></span> 
+					  </div>
 					</div> 
 				  <button class="btn btn-primary">가입하기</button>
 				</form>
             </div>
         </div>
     </div>
-    </main>
-	<footer th:insert="/footer"></footer>
+  </main>
+<footer th:insert="/footer"></footer>
 </body>
 </html>
